--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Build
 
 on:
   push:
@@ -16,5 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Pre Check
+      run: cargo check --all
+    - name: Unit Test
+      run: cargo test
     - name: Build
       run: cargo build --verbose --release
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v3
+      with:
+        name: spicy-scarlet-slug
+        path: target/release/spicy-scarlet-slug
+        retention-days: 1
