--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,18 @@ jobs:
         name: spicy-scarlet-slug
         path: target/release/spicy-scarlet-slug
         retention-days: 1
+
+  test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Download workflow build
+      uses: actions/download-artifact@v3
+      with:
+        name: spicy-scarlet-slug
+    - name: Run service
+      run: ./spicy-scarlet-slug &
+    - name: Run HTTP tests
+      run: hurl --test tests/*hurl
