--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,5 +43,9 @@ jobs:
         name: spicy-scarlet-slug
     - name: Run service
       run: ./spicy-scarlet-slug &
+    - name: Install Hurl
+      run: |
+        curl -LO https://github.com/Orange-OpenSource/hurl/releases/download/1.6.1/hurl_1.6.1_amd64.deb
+        sudo dpkg -i hurl_1.6.1_amd64.deb
     - name: Run HTTP tests
       run: hurl --test tests/*hurl
