--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,10 @@ jobs:
 
     runs-on: ubuntu-latest
     needs: [build]
+    env:
+      SSS_SERVER_IP: 0.0.0.0
+      SSS_SERVER_PORT: 3000
+      SSS_DB_LOCATION: /tmp/sss_db
 
     steps:
     - uses: actions/checkout@v3
